--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     , "mongoose": "2.5.3"
     , "markdown": "> 0"
     , "async": "> 0.1"
-    , "openid": "= 0.3"
+    , "openid": "0.3"
     , "datejs": ">=0.0.2"
+    , "vows": "0.6.2"
+    , "request": "> 0"
   }
 }
